Enhance the student page
